[project]
name = "rclattice"
version = "0.0.1"
description = "Lattice modelling of reinforced concrete members and structures, analysed with OpenSees."
requires-python = ">=3.12"
dependencies = [
    "openseespy>=3.8.0.0",
    "numpy>=2.0",
    "gmsh>=4.13",
    "scipy>=1.17.1",
    "matplotlib>=3.11.0",
    "pillow>=12.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rclattice"]
